src/test/resources/tags/importtag/errors/base.jinja
{% set a = "foo" %}
{% import "tags/importtag/errors/file-with-error.jinja" %}
{% set test = 1 + 2 %}

